# CPTS360

./: .gitignore  README.md  set_default_double.c
10_threads/: CMakeLists.txt  Makefile  README.txt
10_threads/Include/: a2d.h  mat_mul_pt1.h  mat_mul_pt2.h  tspec_diff.h
10_threads/Src/: experiment_tmm_pt1.c  experiment_tmm_pt2.c  mat_mul_pt1.c  mat_mul_pt2.c  tspec_diff.c
11_CL_Proc/: CMakeLists.txt  Makefile  lander_pt3.c  lander_pt4.c
11_CL_Proc-Copy/: lander_pt2.c  lander_pt5.c
1_compare_files/: CMakeLists.txt
1_compare_files/Src/: compare_files.c
2_refactoring/: CMakeLists.txt  old_Makefile
2_refactoring/Src/: gen_perms.c  permute.c
3_low_level_io/: CMakeLists.txt  README.txt  main.c  old_Makefile
4_rational/: CMakeLists.txt  old_Makefile  rational.c  rational.h  rational_t.c
5_finite_state_machines/: CMakeLists.txt  Makefile  tmp.txt
5_finite_state_machines/Src/: codestats_pt1.c  codestats_pt2.c  codestats_pt3.c  codestats_pt4.c  codestats_pt5.c  codestats_pt6.c  codestats_pt7.c
6_fork_of_lab/: README.txt  hello  main.c
7_exceptions/: Makefile  except_demo  find_file  find_file_tplt.c
8_signals/: Makefile  critical_section.h  killme  killme_pt1  killme_pt1.c  killme_pt2  killme_pt2.c  killme_pt3  killme_pt3.c
9_arrays/: CMakeLists.txt  Makefile  README.txt
9_arrays/Include/: alloc_array.h  i2d.h
9_arrays/Src/: plotz2_pt1.c  plotz2_pt2.c  plotz2_pt3.c  plotz2_pt4.c
Finddups/: Makefile  find_dups.c  finddups
demos/: 0_getopt_tplt.c  1_getopt_long_tplt.c  2_getopt_longer_tplt.c  Makefile  allocarray.h  getopt_longer.c  getopt_longer.h
snapshot_t0/: snapshot.c  snapshot_t0
tattle/: CMakeLists.txt  Oct31_2022_wtmp  Oct31_2022_wtmpZone.Identifier  main.c  tattle  wtmp_elec_2022_04_27  wtmp_elec_2022_04_27Zone.Identifier
tattle-Copy/: Makefile  main.c
whocan/: whocan
whocancpy/: CMakeLists.txt  Makefile  main.c  whocan
(+1 files in other folders)
